fix: Adjust select element styling to fix issue on iOS

--- a/sass/css.scss
+++ b/sass/css.scss
@@ -267,7 +267,7 @@ h3 {
   }
 
   select {
-    width: 60px;
+    width: 50px;
   }
 
   .date,
